{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 39,
  "lineage": "6a5041e8-a83b-5e08-d98d-975bbed88a80",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-appgw",
            "location": "eastus",
            "name": "nsg-appgw",
            "resource_group_name": "rg-burgerbuilder-prod",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-appgw",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-backend",
            "location": "eastus",
            "name": "nsg-backend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH_from_Ops_Backend",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.30.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_Frontend_to_Backend_API",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.10.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-backend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend",
            "location": "eastus",
            "name": "nsg-frontend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "Allow_AppGW_to_Frontend",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH_from_Ops",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.30.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-frontend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-ops",
            "location": "eastus",
            "name": "nsg-ops",
            "resource_group_name": "rg-burgerbuilder-prod",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-ops",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule_appgw_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/securityRules/Allow_AppGW_to_Frontend",
            "name": "Allow_AppGW_to_Frontend",
            "network_security_group_name": "nsg-frontend",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-burgerbuilder-prod",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow_AppGW_to_Frontend",
            "network_security_group_name": "nsg-frontend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_frontend",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_appgw",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule_frontend_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/securityRules/Allow_Frontend_to_Backend_API",
            "name": "Allow_Frontend_to_Backend_API",
            "network_security_group_name": "nsg-backend",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-burgerbuilder-prod",
            "source_address_prefix": "10.0.10.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow_Frontend_to_Backend_API",
            "network_security_group_name": "nsg-backend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_backend",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_frontend",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule_ssh_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/securityRules/Allow_SSH_from_Ops",
            "name": "Allow_SSH_from_Ops",
            "network_security_group_name": "nsg-frontend",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-burgerbuilder-prod",
            "source_address_prefix": "10.0.30.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow_SSH_from_Ops",
            "network_security_group_name": "nsg-frontend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_frontend",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_ops",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule_ssh_ops_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/securityRules/Allow_SSH_from_Ops_Backend",
            "name": "Allow_SSH_from_Ops_Backend",
            "network_security_group_name": "nsg-backend",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-burgerbuilder-prod",
            "source_address_prefix": "10.0.30.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow_SSH_from_Ops_Backend",
            "network_security_group_name": "nsg-backend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_backend",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_ops",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-appgw",
            "name": "snet-appgw",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-burgerbuilder-prod",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-appgw",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.20.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-backend",
            "name": "snet-backend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-burgerbuilder-prod",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-backend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.40.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-data",
            "name": "snet-data",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-burgerbuilder-prod",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-data",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-frontend",
            "name": "snet-frontend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-burgerbuilder-prod",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-frontend",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.30.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-ops",
            "name": "snet-ops",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-burgerbuilder-prod",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-ops",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "vnet-burgerbuilder-prod"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appgw_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-appgw",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-appgw",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-appgw"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_appgw",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_appgw",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-backend",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-backend",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-backend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_backend",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_backend",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "frontend_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-frontend",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-frontend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_frontend",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_frontend",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ops_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-ops",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-ops",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-ops"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_ops",
            "azurerm_resource_group.rg_main",
            "azurerm_subnet.snet_ops",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6930e46c-6744-44ef-bd6c-e23bfdebea01",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod",
            "location": "eastus",
            "name": "vnet-burgerbuilder-prod",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-appgw",
                "name": "snet-appgw",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-appgw"
              },
              {
                "address_prefixes": [
                  "10.0.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-frontend",
                "name": "snet-frontend",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend"
              },
              {
                "address_prefixes": [
                  "10.0.20.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-backend",
                "name": "snet-backend",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-backend"
              },
              {
                "address_prefixes": [
                  "10.0.30.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-ops",
                "name": "snet-ops",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-ops"
              },
              {
                "address_prefixes": [
                  "10.0.40.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/rg-burgerbuilder-prod/providers/Microsoft.Network/virtualNetworks/vnet-burgerbuilder-prod/subnets/snet-data",
                "name": "snet-data",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-burgerbuilder-prod",
            "resource_group_name": "rg-burgerbuilder-prod",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg_main"
          ]
        }
      ]
    }
  ]
}